Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -327,6 +327,10 @@ Error message and password prompt
 
 <li>Lynel</li>
 
+<li>Lynel 血月五连</li>
+
+<li>Lynel 路线</li>
+
 <li>Mayanas Shrine</li>
 
 <li>Mount Lanayru Skyview Tower</li>
@@ -543,7 +547,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230526073820898","text":"","list":"Home Tip 蛮族套装","modified":"20230526073843043"},
+{"title":"$:/StoryList","created":"20230526074325428","text":"","list":"Home Tip 蛮族套装 Lynel [[Lynel 血月五连]] [[Lynel 路线]]","modified":"20230526074450187"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -574,7 +578,9 @@ Error message and password prompt
 {"created":"20230522062432648","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 通天术出来 [[大剑草]] [[宁静公主]] (见[[常去的进货地点 (NGA)]])","tags":"地点 Shrine Surface","modified":"20230522063048593","title":"Iun-orok Shrine"},
 {"created":"20230520111554099","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n* 随时针\n* 初始空岛南方平台的右方是最低点，可以传送到 [[Nachoyah Shrine]]\n* 拔出大师剑后高度下降，可以从 [[Sitsum Shrine]] 和 [[Thyphlo Ruins Skyview Tower]] 出发\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115421818","title":"Light Dragon"},
 {"created":"20230525062607868","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n* [[Lynel]] x3","tags":"地点 Tower Surface","modified":"20230525062717216","title":"Lindor's Brow Skyview Tower"},
-{"created":"20230525062724370","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1860&t=LuzplSZ3PNxXULtL-1\">>\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1863&t=LuzplSZ3PNxXULtL-1\">>\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230525155657517","title":"Lynel"},
+{"created":"20230525062724370","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n* [[Lynel 路线]]\n* [[Lynel 血月五连]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230526074449225","title":"Lynel"},
+{"created":"20230526074452797","text":"\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1863&t=LuzplSZ3PNxXULtL-1\">>","title":"Lynel 血月五连","modified":"20230526074453598"},
+{"created":"20230526074440335","text":"\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1860&t=LuzplSZ3PNxXULtL-1\">>","title":"Lynel 路线","modified":"20230526074441432"},
 {"created":"20230520064004722","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1221&t=LuzplSZ3PNxXULtL-1\">>\n\n!! POI\n\n# 神庙内\n#* [[冰龙头]]\n#* [[冷冻果]]\n# 同一岛东北方向水池旁边\n#* [[4风扇飞行器]]\n#* [[光线头]]","title":"Mayanas Shrine","modified":"20230525150033046","tags":"地点 Shrine Sky"},
 {"created":"20230520113837414","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Naydra, the Frost Dragon]]","tags":"地点 Tower Surface","modified":"20230521024110733","title":"Mount Lanayru Skyview Tower"},
 {"created":"20230525155712195","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[Lynel]] x6","tags":"地点","modified":"20230525155738950","title":"Mu-ustust Lightroot"},
