--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@ Error message and password prompt
 
 <li>Untitled</li>
 
+<li>Usazum Shrine</li>
+
 <li>一始村</li>
 
 <li>七宝刀</li>
@@ -404,6 +406,8 @@ Error message and password prompt
 <li>大刺球</li>
 
 <li>大剑草</li>
+
+<li>大剑蘑菇</li>
 
 <li>大剑螃蟹</li>
 
@@ -498,7 +502,7 @@ Error message and password prompt
 {"created":"20230520062350541","text":"show","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home","modified":"20230520062350541"},
 {"created":"20230520081610896","text":"hide","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/import","modified":"20230522233059664"},
 {"created":"20230520064036491","text":"show","title":"$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/tag-manager","modified":"20230520064036491"},
-{"created":"20230522062436257","text":"yes","title":"$:/config/RelinkOnRename","modified":"20230522062436257"},
+{"created":"20230522062436257","text":"no","title":"$:/config/RelinkOnRename","modified":"20230526080737605"},
 {"created":"20230520072236880","title":"$:/config/shortcuts-mac/new-tiddler","text":"","modified":"20230520072236880"},
 {"created":"20230520072242352","title":"$:/config/shortcuts-not-mac/new-tiddler","text":"","modified":"20230520072242352"},
 {"created":"20230520065030554","title":"$:/config/shortcuts/excise","text":"","modified":"20230520065030554"},
@@ -551,7 +555,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230526075925749","text":"","list":"地点 [[Mount Lanayru Skyview Tower]] Home 进货路线 [[常去的进货地点 (NGA)]] Tip 蛮族套装 大剑螃蟹","modified":"20230526080337805"},
+{"title":"$:/StoryList","created":"20230526075925749","text":"","list":"素材 大剑蘑菇 地点 [[Usazum Shrine]] [[Mount Lanayru Skyview Tower]] Home 进货路线 [[常去的进货地点 (NGA)]] Tip 蛮族套装 大剑螃蟹","modified":"20230526080931738"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -606,6 +610,7 @@ Error message and password prompt
 {"created":"20230525160127116","text":"\u003C\u003C.children>>","title":"todo","modified":"20230525160135714"},
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8\n\n* 升高系列：[[炸弹花]] [[弹簧]] [[火箭]] [[飞行翼]] 商店卖的[[飞行伞]]\n* 战斗辅助：[[镜子]]\n* 属性：蝙蝠翅膀 龙岩石 古栗欧克角","tags":"Resource","title":"Top 10 盾牌","modified":"20230525172201930"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
+{"created":"20230526080734747","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A500&t=pZEAVpr6lI3O8rqX-1\">>\n\n!! POI\n\n* 各种蘑菇 [[大剑蘑菇]]","tags":"地点 Shrine Surface","modified":"20230526080918294","title":"Usazum Shrine"},
 {"created":"20230525172729157","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 购买[[海利亚盾]]","tags":"地点 Village Surface","modified":"20230525172807050","title":"一始村"},
 {"created":"20230525165534053","text":"","title":"七宝刀","modified":"20230525165543369","tags":"格鲁德武器 英杰武器"},
 {"created":"20230525165304824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[七宝刀]] + 高攻素材","tags":"武器余料建造","modified":"20230525165405361","title":"七宝刀+高攻素材"},
@@ -622,6 +627,7 @@ Error message and password prompt
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
 {"created":"20230522062746382","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062816849","title":"大剑草"},
+{"created":"20230526080931737","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526080939837","title":"大剑蘑菇"},
 {"created":"20230526080257617","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526080307654","title":"大剑螃蟹"},
 {"created":"20230520111250752","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230520111254676","title":"大剑香蕉"},
 {"created":"20230522062736824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062740772","title":"宁静公主"},
