--- a/index.html
+++ b/index.html
@@ -313,6 +313,8 @@ Error message and password prompt
 
 <li>Dinraal, the Fire Dragon</li>
 
+<li>Ekochiu Shrine</li>
+
 <li>Farosh, the Lightning Dragon</li>
 
 <li>Ganos Shrine</li>
@@ -561,7 +563,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"created":"20230526075925749","title":"$:/StoryList","text":"","list":"$:/ControlPanel 素材 大剑蘑菇 地点 [[Usazum Shrine]] [[Mount Lanayru Skyview Tower]] Home 进货路线 [[常去的进货地点 (NGA)]] Tip 蛮族套装 大剑螃蟹","modified":"20230526081320992"},
+{"title":"$:/StoryList","created":"20230526075925749","text":"","list":"$:/ControlPanel 素材 大剑蘑菇 地点 [[Ekochiu Shrine]] [[Usazum Shrine]] [[Mount Lanayru Skyview Tower]] Home 进货路线 [[常去的进货地点 (NGA)]] Tip 蛮族套装 大剑螃蟹","modified":"20230526081645500"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -586,6 +588,7 @@ Error message and password prompt
 {"created":"20230526075529114","text":"[[Mount Lanayru Skyview Tower]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A485&t=pZEAVpr6lI3O8rqX-1\">>","title":"Blue-Maned Lynel 路线","modified":"20230526075841723"},
 {"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230525134300122","tags":"TableOfContents","caption":"数据库"},
 {"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115251510","title":"Dinraal, the Fire Dragon"},
+{"created":"20230526081645499","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 去妖精泉方向开雷达找 [[大剑蘑菇]]","tags":"地点 驿站 Shrine Surface 大妖精","modified":"20230526081801190","title":"Ekochiu Shrine"},
 {"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115306859","title":"Farosh, the Lightning Dragon"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1287&t=LuzplSZ3PNxXULtL-1\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230525151604886","title":"Ganos Shrine"},
 {"created":"20230525172627073","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[蓄电池+强力风扇]]","tags":"地点 Shrine Surface","modified":"20230525172703530","title":"Gemimik Shrine"},
@@ -636,7 +639,7 @@ Error message and password prompt
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
 {"created":"20230522062746382","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062816849","title":"大剑草"},
-{"created":"20230526080931737","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526080939837","title":"大剑蘑菇"},
+{"created":"20230526080931737","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526081635315","title":"大剑蘑菇"},
 {"created":"20230526080257617","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526080307654","title":"大剑螃蟹"},
 {"created":"20230520111250752","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230520111254676","title":"大剑香蕉"},
 {"created":"20230522062736824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062740772","title":"宁静公主"},
