--- a/index.html
+++ b/index.html
@@ -367,6 +367,8 @@ Error message and password prompt
 
 <li>Sky</li>
 
+<li>Sonapan Shrine</li>
+
 <li>Surface</li>
 
 <li>TableOfContents</li>
@@ -431,6 +433,8 @@ Error message and password prompt
 
 <li>建筑材料</li>
 
+<li>怪物精华</li>
+
 <li>戒心小刀</li>
 
 <li>戒心小刀+人马刃角</li>
@@ -466,6 +470,8 @@ Error message and password prompt
 <li>粗粗的棒子+大刺球</li>
 
 <li>素材</li>
+
+<li>苹果园</li>
 
 <li>蓄电池+强力风扇</li>
 
@@ -555,7 +561,7 @@ Error message and password prompt
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230525150900303"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
-{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"close","modified":"20230525162152257"},
+{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"open","modified":"20230526082005796"},
 {"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
 {"created":"20230525172350923","title":"$:/state/toc/TableOfContents/Database-武器--118161433","text":"close","modified":"20230525172448420"},
 {"created":"20230525163907396","title":"$:/state/toc/TableOfContents/Database-武器余料建造--118161433","text":"close","modified":"20230525171607729"},
@@ -563,7 +569,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230526075925749","text":"","list":"$:/ControlPanel 素材 大剑蘑菇 地点 [[Ekochiu Shrine]] [[Usazum Shrine]] [[Mount Lanayru Skyview Tower]] Home 进货路线 [[常去的进货地点 (NGA)]] Tip 蛮族套装 大剑螃蟹","modified":"20230526081645500"},
+{"title":"$:/StoryList","created":"20230526081910114","text":"","list":"地点 [[Sonapan Shrine]] 苹果园 一始村 素材 怪物精华 Home Tip 蛮族套装","modified":"20230526082221581"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -615,15 +621,16 @@ Error message and password prompt
 {"created":"20230522061914014","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[沃托里村]]及其东南 [[大剑香蕉]]","tags":"地点 Surface Shrine","modified":"20230522062459743","title":"Sifumim Shrine"},
 {"created":"20230520111332422","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后","tags":"地点","modified":"20230521024123200","title":"Sitsum Shrine"},
 {"created":"20230520081723373","title":"Sky","color":"#51a6f5","modified":"20230520081725919"},
+{"created":"20230526082153730","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[苹果园]]","tags":"地点 Shrine Surface","modified":"20230526082217143","title":"Sonapan Shrine"},
 {"created":"20230520111114307","title":"Surface","color":"#4ebc64","modified":"20230520111118325"},
 {"title":"TableOfContents","caption":"{{$:/language/SideBar/Contents/Caption}}","created":"20140809114010378","list":"HelloThere Learning [[Working with TiddlyWiki]] [[Customise TiddlyWiki]] Features Languages Editions Plugins Platforms Reference Community About","list-after":"$:/core/ui/SideBar/Open","modified":"20150414070242411","tags":"$:/tags/SideBar","type":"text/vnd.tiddlywiki","text":"\u003Cdiv class=\"tc-table-of-contents\">\n\n\u003C\u003Ctoc-selective-expandable 'TableOfContents'>>\n\n\u003C/div>\n"},
 {"created":"20230520112008329","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后\n* [[Dinraal, the Fire Dragon]]","tags":"地点 Tower Surface","modified":"20230521024051869","title":"Thyphlo Ruins Skyview Tower"},
-{"created":"20230525071007577","text":"魂之神殿用矿换，几十矿一个(系列的盾剑大剑强都可以换 \n\n能源衣服还是裤子神庙边上每次血月固定刷一堆左纳尼东西，我记得好像有把弓 \n\n开载具的时候要把火贤者关掉，不然会把载具压歪\n\n每一条龙优先打爪子素材\n\n解除冰冷风暴后，可以在营地拿光亮鱼或者蘑菇换取大量弓箭。\n\n6. 苹果园可以刷大量怪物精华。\n\n4. 4个人马肝脏+任意虫子=1300块钱。\n\n2. 怪物精华可以将食物buff时间增加到半小时。\n\n---\n\n\u003C\u003C.children>>\n\n\n","tags":"","title":"Tip","modified":"20230525173144396"},
+{"created":"20230525071007577","text":"魂之神殿用矿换，几十矿一个(系列的盾剑大剑强都可以换 \n\n能源衣服还是裤子神庙边上每次血月固定刷一堆左纳尼东西，我记得好像有把弓 \n\n开载具的时候要把火贤者关掉，不然会把载具压歪\n\n每一条龙优先打爪子素材\n\n解除冰冷风暴后，可以在营地拿光亮鱼或者蘑菇换取大量弓箭。\n\n4. 4个人马肝脏+任意虫子=1300块钱。\n\n---\n\n\u003C\u003C.children>>\n\n\n","tags":"","title":"Tip","modified":"20230526081902587"},
 {"created":"20230525160127116","text":"\u003C\u003C.children>>","title":"todo","modified":"20230525160135714"},
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8\n\n* 升高系列：[[炸弹花]] [[弹簧]] [[火箭]] [[飞行翼]] 商店卖的[[飞行伞]]\n* 战斗辅助：[[镜子]]\n* 属性：蝙蝠翅膀 龙岩石 古栗欧克角","tags":"Resource","title":"Top 10 盾牌","modified":"20230525172201930"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
 {"created":"20230526080734747","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A500&t=pZEAVpr6lI3O8rqX-1\">>\n\n!! POI\n\n* 各种蘑菇 [[大剑蘑菇]]","tags":"地点 Shrine Surface","modified":"20230526080918294","title":"Usazum Shrine"},
-{"created":"20230525172729157","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 购买[[海利亚盾]]","tags":"地点 Village Surface","modified":"20230525172807050","title":"一始村"},
+{"created":"20230525172729157","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 购买[[海利亚盾]]\n* 购买[[怪物精华]]","tags":"地点 Village Surface","modified":"20230526082022041","title":"一始村"},
 {"created":"20230525165534053","text":"","title":"七宝刀","modified":"20230525165543369","tags":"格鲁德武器 英杰武器"},
 {"created":"20230525165304824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[七宝刀]] + 高攻素材","tags":"武器余料建造","modified":"20230525165405361","title":"七宝刀+高攻素材"},
 {"created":"20230520062551727","text":"* [[zeldamaps.com|https://zeldamaps.com/?game=TotK]] Free Markers\n* [[IGN|https://www.ign.com/maps/the-legend-of-zelda-tears-of-the-kingdom/hyrule]] Better search","tags":"Resource","title":"互动地图","modified":"20230521031309283"},
@@ -647,6 +654,7 @@ Error message and password prompt
 {"created":"20230525163940477","text":"\u003C\u003C.children>>","title":"属性材料","modified":"20230525163950129"},
 {"created":"20230521033751771","text":"\u003C\u003C.icon $:/core/images/globe>> [[常去的进货地点 (NGA)|https://ngabbs.com/read.php?tid=36332945]]","modified":"20230522062954811","title":"常去的进货地点 (NGA)","tags":"External"},
 {"created":"20230520063031151","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"建筑材料","modified":"20230520104325426"},
+{"created":"20230526081911853","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n怪物精华可以将食物buff时间增加到半小时\n\n* [[苹果园]]可以刷大量怪物精华\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材 todo","modified":"20230526082002924","title":"怪物精华"},
 {"created":"20230525164305332","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 戒心武器","modified":"20230525164313955","title":"戒心小刀"},
 {"created":"20230525164319304","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[戒心小刀]] + [[Lynel]] 刃角","tags":"武器余料建造","modified":"20230525164348813","title":"戒心小刀+人马刃角"},
 {"created":"20230525164100875","text":"偷袭威力增加\n\n\u003C\u003C.children>>","title":"戒心武器","modified":"20230525164130196"},
@@ -665,6 +673,7 @@ Error message and password prompt
 {"created":"20230525160707857","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n砍树\n","tags":"武器","modified":"20230525161918418","title":"粗粗的棒子"},
 {"created":"20230525160411058","text":"[[粗粗的棒子]] + [[大刺球]]\n\n","tags":"武器余料建造","modified":"20230525165119224","title":"粗粗的棒子+大刺球"},
 {"created":"20230520110332837","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"素材","modified":"20230520110341726"},
+{"created":"20230526082224707","text":"西海拉鲁 [[Sonapan Shrine]] 外","title":"苹果园","modified":"20230526082259941"},
 {"created":"20230525172533136","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230525172558909","title":"蓄电池+强力风扇"},
 {"created":"20230525093112075","text":"* 蛮族套装：蛮族头盔、蛮族服、蛮族短裤\n* 防具属性：攻击提升 {{攻击||$:/core/ui/TagTemplate}}\n* 套装奖励：蓄力攻击精力持久 {{蓄力||$:/core/ui/TagTemplate}}\n\n!! 升级材料\n\n* 防 御 力：3（初始）→5（一星）→ 8（二星）→12（三星）→ 20（四星）\n* 一星：[[大剑草]]×3\n* 二星：[[莱尼尔|Lynel]]的刃角×2、[[莱尼尔|Lynel]]的碎角×2、[[大剑蘑菇]]x5\n* 三星：蓝鬃莱尼尔的刃角×3、蓝鬃莱尼尔的碎角×3、[[大剑螃蟹]]x3\n* 四星：白鬃莱尼尔的刃角×3、白鬃莱尼尔的碎角×3、大剑独角仙x3","tags":"防具 攻击 蓄力 todo","modified":"20230526080251308","title":"蛮族套装"},
 {"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\nhttps://youtu.be/pYhlf4w4nRc\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230524161123927","title":"蜂蜜"},
