Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -407,7 +407,11 @@ Error message and password prompt
 
 <li>刚剑柄+上级魔像3钻头</li>
 
+<li>利特村</li>
+
 <li>卓拉武器</li>
+
+<li>卓拉领地</li>
 
 <li>卡卡利科村</li>
 
@@ -446,6 +450,8 @@ Error message and password prompt
 <li>戒心长刀+属性材料</li>
 
 <li>斩铁大剑+高攻素材</li>
+
+<li>木箭</li>
 
 <li>格鲁德武器</li>
 
@@ -561,15 +567,15 @@ Error message and password prompt
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230525150900303"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
-{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"open","modified":"20230526082005796"},
+{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"open","modified":"20230526092412101"},
 {"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
 {"created":"20230525172350923","title":"$:/state/toc/TableOfContents/Database-武器--118161433","text":"close","modified":"20230525172448420"},
 {"created":"20230525163907396","title":"$:/state/toc/TableOfContents/Database-武器余料建造--118161433","text":"close","modified":"20230525171607729"},
-{"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"close","modified":"20230525171608613"},
-{"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"close","modified":"20230525134347914"},
+{"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"close","modified":"20230526091020795"},
+{"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"open","modified":"20230526091021557"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230526081910114","text":"","list":"地点 [[Sonapan Shrine]] 苹果园 一始村 素材 怪物精华 Home Tip 蛮族套装 大剑蘑菇 [[Usazum Shrine]]","modified":"20230526083224375"},
+{"title":"$:/StoryList","created":"20230526092331490","text":"","list":"[[Usazum Shrine]] 蜂蜜 地点 卓拉领地 利特村 Home 素材 木箭 Tip 怪物精华 蛮族套装 大剑螃蟹 [[Mount Lanayru Skyview Tower]]","modified":"20230526093431229"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -629,7 +635,7 @@ Error message and password prompt
 {"created":"20230525160127116","text":"\u003C\u003C.children>>","title":"todo","modified":"20230525160135714"},
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8\n\n* 升高系列：[[炸弹花]] [[弹簧]] [[火箭]] [[飞行翼]] 商店卖的[[飞行伞]]\n* 战斗辅助：[[镜子]]\n* 属性：蝙蝠翅膀 龙岩石 古栗欧克角","tags":"Resource","title":"Top 10 盾牌","modified":"20230525172201930"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
-{"created":"20230526080734747","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A500&t=pZEAVpr6lI3O8rqX-1\">>\n\n!! POI\n\n* 洞口通天术上去各种蘑菇 [[大剑蘑菇]]","tags":"地点 Shrine Surface","modified":"20230526083504499","title":"Usazum Shrine"},
+{"created":"20230526080734747","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A500&t=pZEAVpr6lI3O8rqX-1\">>\n\n!! POI\n\n* 洞口通天术上去各种蘑菇 [[大剑蘑菇]]\n* 潜行素材 [[潜行草]] [[宁静公主]]\n* [[蜂蜜]]","tags":"地点 Shrine Surface","modified":"20230526093322423","title":"Usazum Shrine"},
 {"created":"20230525172729157","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 购买[[海利亚盾]]\n* 购买[[怪物精华]]","tags":"地点 Village Surface","modified":"20230526082022041","title":"一始村"},
 {"created":"20230525165534053","text":"","title":"七宝刀","modified":"20230525165543369","tags":"格鲁德武器 英杰武器"},
 {"created":"20230525165304824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[七宝刀]] + 高攻素材","tags":"武器余料建造","modified":"20230525165405361","title":"七宝刀+高攻素材"},
@@ -641,13 +647,15 @@ Error message and password prompt
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
 {"created":"20230520064818433","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>","tags":"素材","title":"冷冻果","modified":"20230520110405869"},
 {"created":"20230525172454860","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n","tags":"武器余料建造","modified":"20230525172512961","title":"刚剑柄+上级魔像3钻头"},
+{"created":"20230526092417264","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 3條[[光亮霍拉魚]]，或是3個[[光亮蘑菇]]，或3條[[冰冷鱒魚]]跟他兌換10隻[[木箭]]","tags":"地点","modified":"20230526092508274","title":"利特村"},
 {"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
+{"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老闆換寶石。","tags":"地点 卢比","modified":"20230526092734001","title":"卓拉领地"},
 {"created":"20230525170338081","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A523&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 西北方向 无属性[[蜥蜴战士]]巢穴\n","tags":"地点","modified":"20230525170457292","title":"卡卡利科村"},
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
 {"created":"20230522062746382","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062816849","title":"大剑草"},
 {"created":"20230526080931737","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526081635315","title":"大剑蘑菇"},
-{"created":"20230526080257617","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526080307654","title":"大剑螃蟹"},
+{"created":"20230526080257617","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n費羅尼海的海灘\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526093446113","title":"大剑螃蟹"},
 {"created":"20230520111250752","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230520111254676","title":"大剑香蕉"},
 {"created":"20230522062736824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062740772","title":"宁静公主"},
 {"created":"20230521131858515","text":"\u003C\u003C.icon $:/core/images/globe>> [[小技巧，208攻搓背剑，血月提款路线等 (NGA)|https://ngabbs.com/read.php?tid=36296144]]\n\n!! Actions\n\n* 水下竞技场人马","modified":"20230521132102663","title":"小技巧，208攻搓背剑，血月提款路线等 (NGA)","tags":""},
@@ -661,6 +669,7 @@ Error message and password prompt
 {"created":"20230525164036921","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 戒心武器","modified":"20230525164054590","title":"戒心长刀"},
 {"created":"20230525163656332","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[戒心长刀]] + {{属性材料||$:/core/ui/TagTemplate}}","tags":"武器余料建造","modified":"20230525164015821","title":"戒心长刀+属性材料"},
 {"created":"20230525164850919","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[斩铁大剑]] + 高攻素材\n\n钝器伤害","tags":"武器余料建造","modified":"20230525165228990","title":"斩铁大剑+高攻素材"},
+{"created":"20230526092333222","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526092337592","title":"木箭"},
 {"created":"20230525165551136","text":"材料攻击 x2","title":"格鲁德武器","modified":"20230525165558529"},
 {"created":"20230525160635718","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器","modified":"20230525160647314"},
 {"created":"20230525160233560","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"武器余料建造","modified":"20230525160257892"},
@@ -676,7 +685,7 @@ Error message and password prompt
 {"created":"20230526082224707","text":"西海拉鲁 [[Sonapan Shrine]] 外","title":"苹果园","modified":"20230526082259941"},
 {"created":"20230525172533136","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230525172558909","title":"蓄电池+强力风扇"},
 {"created":"20230525093112075","text":"* 蛮族套装：蛮族头盔、蛮族服、蛮族短裤\n* 防具属性：攻击提升 {{攻击||$:/core/ui/TagTemplate}}\n* 套装奖励：蓄力攻击精力持久 {{蓄力||$:/core/ui/TagTemplate}}\n\n!! 升级材料\n\n* 防 御 力：3（初始）→5（一星）→ 8（二星）→12（三星）→ 20（四星）\n* 一星：[[大剑草]]×3\n* 二星：[[莱尼尔|Lynel]]的刃角×2、[[莱尼尔|Lynel]]的碎角×2、[[大剑蘑菇]]x5\n* 三星：蓝鬃莱尼尔的刃角×3、蓝鬃莱尼尔的碎角×3、[[大剑螃蟹]]x3\n* 四星：白鬃莱尼尔的刃角×3、白鬃莱尼尔的碎角×3、大剑独角仙x3","tags":"防具 攻击 蓄力 todo","modified":"20230526080251308","title":"蛮族套装"},
-{"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\nhttps://youtu.be/pYhlf4w4nRc\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230524161123927","title":"蜂蜜"},
+{"created":"20230524161043613","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n初始台地 [img[https://blog.iany.me/uploads/202305/uv6O8Y/kADpwx.png]]\n\n库坦池塘附近\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526091143676","title":"蜂蜜"},
 {"created":"20230525163821378","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 属性材料","modified":"20230525172328000","title":"蜥蜴战士"},
 {"created":"20230525163245757","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n[[近卫武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 近卫武器","modified":"20230525163441216","title":"近卫大剑"},
 {"created":"20230525162321299","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[近卫大剑]] + [[Lynel]] 刃角\n","tags":"武器余料建造","modified":"20230525162524905","title":"近卫大剑+人马刃角"},
