--- a/index.html
+++ b/index.html
@@ -449,6 +449,8 @@ Error message and password prompt
 
 <li>戒心长刀+属性材料</li>
 
+<li>料理</li>
+
 <li>斩铁大剑+高攻素材</li>
 
 <li>木箭</li>
@@ -575,7 +577,7 @@ Error message and password prompt
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"open","modified":"20230526091021557"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","created":"20230526092331490","text":"","list":"[[Usazum Shrine]] 蜂蜜 地点 卓拉领地 利特村 Home 素材 木箭 Tip 怪物精华 蛮族套装 大剑螃蟹 [[Mount Lanayru Skyview Tower]]","modified":"20230526093431229"},
+{"title":"$:/StoryList","created":"20230526094204708","text":"","list":"Home 料理 Tip 怪物精华 蛮族套装","modified":"20230526094204708"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -668,6 +670,7 @@ Error message and password prompt
 {"created":"20230525164100875","text":"偷袭威力增加\n\n\u003C\u003C.children>>","title":"戒心武器","modified":"20230525164130196"},
 {"created":"20230525164036921","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"武器 戒心武器","modified":"20230525164054590","title":"戒心长刀"},
 {"created":"20230525163656332","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[戒心长刀]] + {{属性材料||$:/core/ui/TagTemplate}}","tags":"武器余料建造","modified":"20230525164015821","title":"戒心长刀+属性材料"},
+{"created":"20230526094204707","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"料理","modified":"20230526094211238"},
 {"created":"20230525164850919","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[斩铁大剑]] + 高攻素材\n\n钝器伤害","tags":"武器余料建造","modified":"20230525165228990","title":"斩铁大剑+高攻素材"},
 {"created":"20230526092333222","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526092337592","title":"木箭"},
 {"created":"20230525165551136","text":"材料攻击 x2","title":"格鲁德武器","modified":"20230525165558529"},
