Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@ Error message and password prompt
 
 <li>Dinraal, the Fire Dragon</li>
 
+<li>Dragon</li>
+
 <li>Ekochiu Shrine</li>
 
 <li>Farosh, the Lightning Dragon</li>
@@ -434,6 +436,8 @@ Error message and password prompt
 <li>小技巧，208攻搓背剑，血月提款路线等 (NGA)</li>
 
 <li>属性材料</li>
+
+<li>左纳乌武器</li>
 
 <li>常去的进货地点 (NGA)</li>
 
@@ -575,15 +579,15 @@ Error message and password prompt
 {"created":"20230520081558315","title":"$:/state/tabs/controlpanel/toolbars-1345989671","text":"$:/core/ui/ControlPanel/Toolbars/EditToolbar","modified":"20230522234039916"},
 {"created":"20230525134302402","title":"$:/state/toc/TableOfContents-Database--118161433","text":"open","modified":"20230525150900303"},
 {"created":"20230525134337246","title":"$:/state/toc/TableOfContents-Resource--118161433","text":"close","modified":"20230526075924285"},
-{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"open","modified":"20230526092412101"},
+{"created":"20230525134352827","title":"$:/state/toc/TableOfContents/Database-地点--118161433","text":"close","modified":"20230526142320658"},
 {"created":"20230525134349626","title":"$:/state/toc/TableOfContents/Database-建筑材料--118161433","text":"close","modified":"20230525134352244"},
 {"created":"20230525172350923","title":"$:/state/toc/TableOfContents/Database-武器--118161433","text":"close","modified":"20230525172448420"},
 {"created":"20230525163907396","title":"$:/state/toc/TableOfContents/Database-武器余料建造--118161433","text":"close","modified":"20230525171607729"},
-{"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"close","modified":"20230526091020795"},
+{"created":"20230525134345720","title":"$:/state/toc/TableOfContents/Database-生物--118161433","text":"open","modified":"20230526142322558"},
 {"created":"20230525134344064","title":"$:/state/toc/TableOfContents/Database-素材--118161433","text":"open","modified":"20230526091021557"},
 {"created":"20230525134338184","title":"$:/state/toc/TableOfContents/Database-防具--118161433","text":"close","modified":"20230525134348740"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
-{"title":"$:/StoryList","text":"","list":"Home Tip 蛮族套装"},
+{"title":"$:/StoryList","text":"","list":"Home Tip 左纳乌武器 蛮族套装"},
 {"created":"20230520081651938","title":"$:/tags/PageControls","list":"$:/core/ui/Buttons/home $:/core/ui/Buttons/close-all $:/core/ui/Buttons/fold-all $:/core/ui/Buttons/unfold-all $:/core/ui/Buttons/permaview $:/core/ui/Buttons/new-tiddler $:/core/ui/Buttons/new-journal $:/core/ui/Buttons/new-image $:/core/ui/Buttons/import $:/core/ui/Buttons/export-page $:/core/ui/Buttons/tag-manager $:/core/ui/Buttons/control-panel $:/core/ui/Buttons/advanced-search $:/core/ui/Buttons/manager $:/core/ui/Buttons/language $:/core/ui/Buttons/palette $:/core/ui/Buttons/theme $:/core/ui/Buttons/layout $:/core/ui/Buttons/storyview $:/core/ui/Buttons/encryption $:/core/ui/Buttons/timestamp $:/core/ui/Buttons/full-screen $:/core/ui/Buttons/print $:/core/ui/Buttons/save-wiki $:/core/ui/Buttons/refresh $:/core/ui/Buttons/more-page-actions","modified":"20230520081651938"},
 {"created":"20230525101749373","text":"","title":"$:/tags/ViewTemplateBodyFilter","list":"$:/config/ViewTemplateBodyFilters/hide-body $:/config/ViewTemplateBodyFilters/code-body $:/config/ViewTemplateBodyFilters/stylesheet $:/config/ViewTemplateBodyFilters/system $:/config/ViewTemplateBodyFilters/import $:/config/ViewTemplateBodyFilters/plugin $:/config/ViewTemplateBodyFilters/backlinks $:/config/ViewTemplateBodyFilters/default","modified":"20230525101753748"},
 {"created":"20230520071000269","text":"\u003C\u003Clist-links \"[tag{!!title}sort[title]]\">>\n\n\u003C\u003C.newButton>>","tags":"Template","title":"$:/template/Database","modified":"20230520103522228"},
@@ -608,9 +612,10 @@ Error message and password prompt
 {"created":"20230526075529114","text":"[[Mount Lanayru Skyview Tower]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A485&t=pZEAVpr6lI3O8rqX-1\">>","title":"Blue-Maned Lynel 路线","modified":"20230526075841723"},
 {"created":"20230520105716761","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","title":"Database","modified":"20230525134300122","tags":"TableOfContents","caption":"数据库"},
 {"created":"20230526141738328","title":"Depths","color":"#000000","modified":"20230526141738516"},
-{"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115251510","title":"Dinraal, the Fire Dragon"},
+{"created":"20230520113323960","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142333637","title":"Dinraal, the Fire Dragon"},
+{"created":"20230526142421909","text":"优先打爪子素材\n\n可获得素材\n\n* 岩石，属性材料。[[Light Dragon]] 的效果是[[吸血]]。\n* 角\n* 鳞\n* 爪\n\n每次刷新角，鳞，爪三选一。\n","title":"Dragon","modified":"20230526142616993"},
 {"created":"20230526081645499","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 去妖精泉方向开雷达找 [[大剑蘑菇]]","tags":"地点 驿站 Shrine Surface 大妖精","modified":"20230526081801190","title":"Ekochiu Shrine"},
-{"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115306859","title":"Farosh, the Lightning Dragon"},
+{"created":"20230520112110771","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142341690","title":"Farosh, the Lightning Dragon"},
 {"created":"20230520105317130","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=86%3A1287&t=LuzplSZ3PNxXULtL-1\" >>\n\n!! POI\n\n# [[4风扇飞行器]]\n\n","tags":"地点 Shrine Sky","modified":"20230525151604886","title":"Ganos Shrine"},
 {"created":"20230525172627073","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[蓄电池+强力风扇]]","tags":"地点 Shrine Surface","modified":"20230525172703530","title":"Gemimik Shrine"},
 {"created":"20230525171410176","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A674&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 属性[[蜥蜴战士]] 白天火晚上冰","tags":"地点 Surface Tower","modified":"20230525171508214","title":"Gerudo Canyon Skyview Tower"},
@@ -618,7 +623,7 @@ Error message and password prompt
 {"created":"20230525163135855","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! F1\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=122%3A512&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* [[近卫大剑]]\n* [[海利亚盾]]","tags":"地点 Dungeon","modified":"20230525172824495","title":"Hyrule Castle"},
 {"created":"20230520083335975","text":"\\define copyActions() \u003C$action-sendmessage $message=\"tm-copy-to-clipboard\" $param=\u003C\u003CimageTitle>>/>\n\n\u003C\u003C.tip \"Click an icon to copy the title to the clipboard\">>\n\n\u003Cdiv class=\"tc-image-chooser\">\n\u003C$macrocall $name=\"image-picker-list\" filter=\"[all[shadows+tiddlers]tag[$:/tags/Image]]\" actions=\u003C\u003CcopyActions>> />\n\u003C/div>\n\n","tags":"","title":"Image Gallery","modified":"20230520083349838"},
 {"created":"20230522062432648","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 通天术出来 [[大剑草]] [[宁静公主]] (见[[常去的进货地点 (NGA)]])","tags":"地点 Shrine Surface","modified":"20230522063048593","title":"Iun-orok Shrine"},
-{"created":"20230520111554099","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n* 随时针\n* 初始空岛南方平台的右方是最低点，可以传送到 [[Nachoyah Shrine]]\n* 拔出大师剑后高度下降，可以从 [[Sitsum Shrine]] 和 [[Thyphlo Ruins Skyview Tower]] 出发\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115421818","title":"Light Dragon"},
+{"created":"20230520111554099","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n* 随时针\n* 初始空岛南方平台的右方是最低点，可以传送到 [[Nachoyah Shrine]]\n* 拔出大师剑后高度下降，可以从 [[Sitsum Shrine]] 和 [[Thyphlo Ruins Skyview Tower]] 出发\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142402293","title":"Light Dragon"},
 {"created":"20230525062607868","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n* [[Lynel]] x3 [[Lynel 路线]]","tags":"地点 Tower Surface","modified":"20230526075609759","title":"Lindor's Brow Skyview Tower"},
 {"created":"20230525062724370","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n* [[Lynel 路线]]\n* [[Blue-Maned Lynel 路线]]\n* White-Manned 推荐 [[Lynel 血月五连]]\n\n!! 刷新点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230526074645789","title":"Lynel"},
 {"created":"20230526074452797","text":"[[Mu-ustust Lightroot]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=115%3A1863&t=LuzplSZ3PNxXULtL-1\">>","title":"Lynel 血月五连","modified":"20230526075753372"},
@@ -627,7 +632,7 @@ Error message and password prompt
 {"created":"20230520113837414","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Naydra, the Frost Dragon]]\n\n!! POI\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=150%3A497&t=pZEAVpr6lI3O8rqX-1\">>\n\n* Blue-Maned [[Lynel]] x3 [[Blue-Maned Lynel 路线]]\n* [[大剑螃蟹]] x11","tags":"地点 Tower Surface","modified":"20230526080421442","title":"Mount Lanayru Skyview Tower"},
 {"created":"20230525155712195","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* [[Lynel]] x6: Lynel x2, Blue-Maned x1, White-Maned x1, Silver x2","tags":"地点 Lightroot Depths","modified":"20230526141810074","title":"Mu-ustust Lightroot"},
 {"created":"20230520111823260","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之前","tags":"地点 Sky Shrine","modified":"20230521024143997","title":"Nachoyah Shrine"},
-{"created":"20230520113326620","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物","modified":"20230520115529870","title":"Naydra, the Frost Dragon"},
+{"created":"20230520113326620","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[生物]]\n\n!! 出发点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"生物 Dragon","modified":"20230526142354217","title":"Naydra, the Frost Dragon"},
 {"created":"20230525161647630","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","modified":"20230525161647630","title":"New 建筑材料"},
 {"created":"20230525162154750","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=120%3A481&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* [[大刺球]]","tags":"地点 Shrine Surface","modified":"20230525162224499","title":"Orochium Shrine"},
 {"created":"20230521033858671","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.featured>>\n\n!! POI\n\n# 神庙内\n#* [[火箭]] 无限刷新 (见[[常去的进货地点 (NGA)]])","tags":"地点","modified":"20230522063059040","title":"Oromuwak Shrine"},
@@ -640,7 +645,7 @@ Error message and password prompt
 {"created":"20230520111114307","title":"Surface","color":"#4ebc64","modified":"20230520111118325"},
 {"title":"TableOfContents","caption":"{{$:/language/SideBar/Contents/Caption}}","created":"20140809114010378","list":"HelloThere Learning [[Working with TiddlyWiki]] [[Customise TiddlyWiki]] Features Languages Editions Plugins Platforms Reference Community About","list-after":"$:/core/ui/SideBar/Open","modified":"20150414070242411","tags":"$:/tags/SideBar","type":"text/vnd.tiddlywiki","text":"\u003Cdiv class=\"tc-table-of-contents\">\n\n\u003C\u003Ctoc-selective-expandable 'TableOfContents'>>\n\n\u003C/div>\n"},
 {"created":"20230520112008329","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! 登龙\n\n* [[Light Dragon]] 拔出大师剑之后\n* [[Dinraal, the Fire Dragon]]","tags":"地点 Tower Surface","modified":"20230521024051869","title":"Thyphlo Ruins Skyview Tower"},
-{"created":"20230525071007577","text":"能源衣服还是裤子神庙边上每次血月固定刷一堆左纳尼东西，我记得好像有把弓 \n\n每一条龙优先打爪子素材\n\n---\n\n\u003C\u003C.children>>\n\n\n","tags":"","title":"Tip","modified":"20230526142025146"},
+{"created":"20230525071007577","text":"\u003C\u003C.children>>\n\n\n","tags":"","title":"Tip","modified":"20230526142315928"},
 {"created":"20230525160127116","text":"\u003C\u003C.children>>","title":"todo","modified":"20230525160135714"},
 {"created":"20230524155715154","text":"https://youtu.be/aXMFXs86oB8\n\n* 升高系列：[[炸弹花]] [[弹簧]] [[火箭]] [[飞行翼]] 商店卖的[[飞行伞]]\n* 战斗辅助：[[镜子]]\n* 属性：蝙蝠翅膀 龙岩石 古栗欧克角","tags":"Resource","title":"Top 10 盾牌","modified":"20230525172201930"},
 {"title":"Untitled","text":"蛮族套装升级材料"},
@@ -655,7 +660,7 @@ Error message and password prompt
 {"created":"20230525165329259","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[光鳞之枪]] + 冰属性素材比如 [[蜥蜴战士]]","tags":"武器余料建造","modified":"20230525165427492","title":"光鳞之枪+冰属性素材"},
 {"created":"20230520063601215","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[建筑材料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"建筑材料","title":"冰龙头","modified":"20230520110307600"},
 {"created":"20230520064818433","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>","tags":"素材","title":"冷冻果","modified":"20230520110405869"},
-{"created":"20230525172454860","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n","tags":"武器余料建造","modified":"20230525172512961","title":"刚剑柄+上级魔像3钻头"},
+{"created":"20230525172454860","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[武器余料建造]]\n\n[[左纳乌武器]]\n","tags":"武器余料建造","modified":"20230526142258511","title":"刚剑柄+上级魔像3钻头"},
 {"created":"20230526092417264","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 3條[[光亮霍拉魚]]，或是3個[[光亮蘑菇]]，或3條[[冰冷鱒魚]]跟他兌換10隻[[木箭]]","tags":"地点 Tip","modified":"20230526141950172","title":"利特村"},
 {"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
 {"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老闆換寶石。","tags":"地点 卢比 Tip","modified":"20230526141959145","title":"卓拉领地"},
@@ -669,6 +674,7 @@ Error message and password prompt
 {"created":"20230522062736824","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062740772","title":"宁静公主"},
 {"created":"20230521131858515","text":"\u003C\u003C.icon $:/core/images/globe>> [[小技巧，208攻搓背剑，血月提款路线等 (NGA)|https://ngabbs.com/read.php?tid=36296144]]\n\n!! Actions\n\n* 水下竞技场人马","modified":"20230521132102663","title":"小技巧，208攻搓背剑，血月提款路线等 (NGA)","tags":""},
 {"created":"20230525163940477","text":"\u003C\u003C.children>>","title":"属性材料","modified":"20230525163950129"},
+{"created":"20230526142134320","text":"结合左纳乌材料时威力增强。\n\n能源衣服还是裤子神庙边上每次血月固定刷一堆左纳尼东西，我记得好像有把弓。\n\n---\n\n\u003C\u003C.children>>","title":"左纳乌武器","modified":"20230526142649292","tags":"todo"},
 {"created":"20230521033751771","text":"\u003C\u003C.icon $:/core/images/globe>> [[常去的进货地点 (NGA)|https://ngabbs.com/read.php?tid=36332945]]","modified":"20230522062954811","title":"常去的进货地点 (NGA)","tags":"External"},
 {"created":"20230520063031151","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"建筑材料","modified":"20230520104325426"},
 {"created":"20230526081911853","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n怪物精华可以将食物buff时间增加到半小时\n\n* [[苹果园]]可以刷大量怪物精华\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230526142035077","title":"怪物精华"},
