Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -417,6 +417,8 @@ Error message and password prompt
 
 <li>卡卡利科村</li>
 
+<li>地底武器刷新</li>
+
 <li>地点</li>
 
 <li>大刺球</li>
@@ -664,6 +666,7 @@ Error message and password prompt
 {"created":"20230525164716484","text":"湿身威力增加","tags":"","title":"卓拉武器","modified":"20230525165654013"},
 {"created":"20230526092557979","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n!! POI\n\n* 下雨天附近很多[[精力螃蟹]]，可以跟商店老闆換寶石。","tags":"地点 卢比 Tip","modified":"20230526141959145","title":"卓拉领地"},
 {"created":"20230525170338081","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[地点]]\n\n\u003C\u003C.figma \"https://www.figma.com/file/wsk1tyIypyKVh1JRevscio/Zelda---Tears-of-the-Kingdom?type=design&node-id=126%3A523&t=Wpm6mjcU1gBRLdax-1\">>\n\n!! POI\n\n* 西北方向 无属性[[蜥蜴战士]]巢穴\n","tags":"地点","modified":"20230525170457292","title":"卡卡利科村"},
+{"created":"20230526144433268","text":"* 武器双手、单手、枪的类型固定，品牌随机\n* 血月刷新，人在地底时一定不会触发血月","tags":"Tip Depths","title":"地底武器刷新","modified":"20230526144745530"},
 {"created":"20230520064224697","text":"\u003C\u003C.children>>\n\n\u003C\u003C.newButton>>","tags":"Database","title":"地点","modified":"20230520104729787"},
 {"created":"20230525161728444","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[余料]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"余料","modified":"20230525161823382","title":"大刺球"},
 {"created":"20230522062746382","text":"\u003C$link to=\"Home\">\u003C\u003C.icon $:/core/images/home-button>>\u003C/$link> › [[素材]]\n\n!! 进货点\n\n\u003C\u003Clist-links \"[all[current]backlinks[]] +[tag[地点]]\">>\n","tags":"素材","modified":"20230522062816849","title":"大剑草"},
